changed the layout color and format - cleaned up some styles

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "curl": "^0.1.4",
     "framer-motion": "^2.9.4",
+    "pure-react-carousel": "^1.27.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.9.1",
