--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
     "curl": "^0.1.4",
     "framer-motion": "^2.9.4",
     "pure-react-carousel": "^1.27.5",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.9.1",
     "react-router-dom": "^5.2.0",
