responsive mobile main page first draft done

--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://josh-fusillo.github.io/josh-fusillo-capstone-muews",
   "name": "music-app-capstone",
   "version": "0.1.0",
   "private": true,
@@ -11,7 +12,6 @@
     "cors": "^2.8.5",
     "curl": "^0.1.4",
     "framer-motion": "^2.9.4",
-    "gh-pages": "^3.1.0",
     "pure-react-carousel": "^1.27.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
@@ -22,8 +22,6 @@
     "styled-components": "^5.2.0",
     "uuidv4": "^6.2.4"
   },
-  
-  "homepage": "https://josh-fusillo.github.io/josh-fusillo-capstone-meuws",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -46,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
