--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^2.9.4",
     "pure-react-carousel": "^1.27.5",
     "react": "^16.13.1",
+    "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.9.1",
